[project]
name = "tj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "flask>=3.1.3",
    "metatrader5>=5.0.5735",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
    "websockets>=16.0",
]
